[gd_scene load_steps=2 format=3 uid="uid://b5sm04ln1386b"]

[ext_resource type="Script" path="res://assets/GUI_Boxes/Modal.gd" id="1_kepiy"]

[node name="Modal" type="PanelContainer"]
custom_minimum_size = Vector2(150, 150)
script = ExtResource("1_kepiy")
panel_text = PackedStringArray("hello", "je suis", "content")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="prompteur" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 3
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
fit_content = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="previous" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
text = "Prev"

[node name="close" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
text = "got it"

[node name="next" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "next"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/next" to="." method="_on_next_pressed"]
